Add lxc-gatus client

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -25,3 +25,4 @@ root;lxc-changedetectionio;/opt/docker
 root;lxc-redlib;/opt/docker
 root;lxc-rxresume;/opt/docker
 root;lxc-sevenseas;/opt/docker
+root;lxc-gatus;/opt/docker
