--- a/config/clients.conf
+++ b/config/clients.conf
@@ -26,3 +26,4 @@ root;lxc-redlib;/opt/docker
 root;lxc-rxresume;/opt/docker
 root;lxc-sevenseas;/opt/docker
 root;lxc-gatus;/opt/docker
+root;lxc-fusion;/opt/docker
