Add lxc-docker-hub-rss client

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -27,3 +27,4 @@ root;lxc-rxresume;/opt/docker
 root;lxc-sevenseas;/opt/docker
 root;lxc-gatus;/opt/docker
 root;lxc-fusion;/opt/docker
+root;lxc-docker-hub-rss;/opt/docker
