Add lxc-beszel client

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -28,3 +28,4 @@ root;lxc-sevenseas;/opt/docker
 root;lxc-gatus;/opt/docker
 root;lxc-fusion;/opt/docker
 root;lxc-docker-hub-rss;/opt/docker
+root;lxc-beszel;/opt/docker
