Add lxc-workstation client

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -1,3 +1,4 @@
+casper;lxc-workstation;/home/casper
 root;lxc-adguardhome-sync;/opt/docker
 root;lxc-agh-dns-03;/opt/docker
 root;lxc-beszel;/opt/docker
