Add lxc-foldingathome-01 and lxc-foldingathome-02 clients

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -25,5 +25,7 @@ root;lxc-traefik-01;/opt/docker
 root;lxc-traefik-02;/opt/docker
 root;lxc-traefik-03;/opt/docker
 root;lxc-web-check;/opt/docker
+root;lxc-foldingathome-01;/opt/docker
+root;lxc-foldingathome-02;/opt/docker
 root;srv01-prd-defra-oci;/opt/docker
 root;srv02-prd-defra-oci;/opt/docker
