Add SeaweedFS cluster
Now my cluster is running on baremetal instead of docker

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -29,3 +29,12 @@ root;lxc-foldingathome-01;/opt/docker
 root;lxc-foldingathome-02;/opt/docker
 root;srv01-prd-defra-oci;/opt/docker
 root;srv02-prd-defra-oci;/opt/docker
+root;lxc-seaweedfs-master-01;/root/seaweedfs
+root;lxc-seaweedfs-master-02;/root/seaweedfs
+root;lxc-seaweedfs-master-03;/root/seaweedfs
+root;lxc-seaweedfs-volume-01;/root/seaweedfs
+root;lxc-seaweedfs-volume-02;/root/seaweedfs
+root;lxc-seaweedfs-volume-03;/root/seaweedfs
+root;lxc-seaweedfs-filer-01;/root/seaweedfs
+root;lxc-seaweedfs-filer-02;/root/seaweedfs
+root;lxc-seaweedfs-filer-03;/root/seaweedfs
