--- a/config/clients.conf
+++ b/config/clients.conf
@@ -35,6 +35,8 @@ root;lxc-seaweedfs-master-03;/root/seaweedfs
 root;lxc-seaweedfs-volume-01;/root/seaweedfs
 root;lxc-seaweedfs-volume-02;/root/seaweedfs
 root;lxc-seaweedfs-volume-03;/root/seaweedfs
+root;lxc-seaweedfs-volume-defra-01;/root/seaweedfs
+root;lxc-seaweedfs-volume-defra-02;/root/seaweedfs
 root;lxc-seaweedfs-filer-01;/root/seaweedfs
 root;lxc-seaweedfs-filer-02;/root/seaweedfs
 root;lxc-seaweedfs-filer-03;/root/seaweedfs
