Add 1 more SeaweedFS volume instance

--- a/config/clients.conf
+++ b/config/clients.conf
@@ -35,6 +35,7 @@ root;lxc-seaweedfs-master-03;/root/seaweedfs
 root;lxc-seaweedfs-volume-01;/root/seaweedfs
 root;lxc-seaweedfs-volume-02;/root/seaweedfs
 root;lxc-seaweedfs-volume-03;/root/seaweedfs
+root;lxc-seaweedfs-volume-04;/root/seaweedfs
 root;lxc-seaweedfs-volume-defra-01;/root/seaweedfs
 root;lxc-seaweedfs-volume-defra-02;/root/seaweedfs
 root;lxc-seaweedfs-filer-01;/root/seaweedfs
